# serializer version: 1
# name: test_streamk_pap_cluster_multicast_gfx1250_golden[cs2_ck2]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArgBzGq_ol_npq9TrXuWmR9To451dGJw6DrZ1o9iKn7mLk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArgQjpn3y1uTG6ZHVAiakbgAwOpssfx0HDrxXgRxySuYHY=',
      'err': 0,
    }),
  ])
# ---
# name: test_streamk_pap_cluster_multicast_gfx1250_golden[cs4_ck1]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArg8jnFWcdR1PSqA1IvYT73ChFmZkfK48qhNhrvG_SgYAg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArgc3jUgHj4yZ_ccVHdSRBdgZFb_N7KtbM1cpUU1Dm0xBM=',
      'err': 0,
    }),
  ])
# ---
